Fix spacing issue for content after headings and between table rows

--- a/src/styles.css
+++ b/src/styles.css
@@ -119,7 +119,9 @@ div.alignRow {
 table.quoteTable {
   text-align: left;
   width: 100%;
+  border-collapse: separate;
   border-spacing: 0 1em;
+  /* border-style: solid; */
 }
 
 #quotePrice {
